--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rebound": "^0.1.0",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.3",
+    "subscriptions-transport-ws": "^0.9.16",
     "urql": "^1.1.1"
   },
   "scripts": {
